--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ google-generativeai>=0.3.0
 python-dotenv>=1.0.0
 black>=23.7.0
 flake8>=6.1.0
-pylint>=2.17.0
+pylint>=3.0.3
 pandas>=2.0.0
 matplotlib>=3.7.0
 seaborn>=0.12.0
@@ -12,3 +12,4 @@ pytest>=7.4.0
 pytest-django>=4.5.2
 pytest-cov>=4.1.0
 coverage>=7.3.2
+beautifulsoup4>=4.12.3
